--- a/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler.csproj
@@ -19,10 +19,13 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="NLog" Version="4.7.15" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Problem2" />
+      <None Update="nlog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
