--- a/Project Euler/nlog.config
+++ b/Project Euler/nlog.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<nlog xmlns="https://nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns="https://nlog-project.org/schemas/NLog.xsd"
       autoReload="true"
       internalLogLevel="Off" internalLogFile="${basedir}/logs/internal-nlog.log">
 
@@ -11,14 +11,14 @@
     <variable name="blockPadding" value="padding=5:fixedLength=true"/>
     <variable name="encoding" value="utf-8"/>
     <variable name="layout"
-              value="[${threadid:${blockPadding}}][${longdate}][${uppercase:${level}:${blockPadding}}][${logger}]: ${message} ${exception:format=tostring}" />
+              value="[${threadid:${blockPadding}}][${longdate}][${uppercase:${level}:${blockPadding}}][${logger}]: ${message} ${exception:format=tostring}"/>
     <variable name="minLogLevel" value="Info"/>
 
     <targets>
         <target xsi:type="ColoredConsole"
                 name="console"
                 layout="${layout}"
-                encoding="${encoding}" />
+                encoding="${encoding}"/>
     </targets>
 
     <rules>
