--- a/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler.csproj
@@ -9,8 +9,8 @@
 
     <PropertyGroup>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <WarningsAsErrors/>
-        <NoWarn/>
+        <WarningsAsErrors />
+        <NoWarn />
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,15 +18,15 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="NLog" Version="4.7.15"/>
-        <PackageReference Include="UnityContainerAttributeRegistration" Version="0.3.0"/>
+        <PackageReference Include="NLog" Version="4.7.15" />
+        <PackageReference Include="UnityContainerAttributeRegistration" Version="0.3.0" />
     </ItemGroup>
 
     <ItemGroup>
         <None Update="nlog.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\primes.json">
+        <None Update="Assets\**\*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
